chore: prior clean up commit

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -584,7 +584,7 @@
 
 # Keybase
  @misc{rochko_2021,
-  title   = {Remove keybase integration by Gargron · pull request #17045 · Mastodon/Mastodon},
+  title   = {Remove keybase integration by Gargron · pull request 17045 · Mastodon/Mastodon},
   url     = {https://github.com/mastodon/mastodon/pull/17045},
   journal = {GitHub},
   author  = {Rochko, Eugene},
