--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -3,39 +3,43 @@
 
 \section{Motivation}
 
-The Internet today is essential to our society. There is an online supply for almost every thinkable service. Activities like reading the news, booking tickets, doing sports, listening to music, calling, exploring, working, connecting, and shopping are now possible through online services. However, since the Internet was not conceptualized to identify people, all these services must find a way to do it \cite{Tobin_Reed_Windley_Foundation_2017}. This workaround can be referred to as \emph{identity one-offs}. This means that users must create a different identity for each service they want to consume, resulting in hundreds of identities, each existing only in a single organizational context. Identity one-offs prove the lack of consolidated digital identities\cite{macinnis_2019}.
+The Internet today is essential to our society. There is an online supply for almost every thinkable service. Activities like reading the news, booking tickets, doing sports, listening to music, calling, exploring, working, connecting, and shopping are now possible through online services. However, since the Internet was not conceptualized to identify people, all these services must find a way to do it \cite{Tobin_Reed_Windley_Foundation_2017}. This workaround can be referred to as \emph{identity one-offs}. This means that users must create a different identity for each service they want to consume, resulting in hundreds of identities, each existing only in a single organizational context. Identity one-offs prove the lack of consolidated digital identities \cite{macinnis_2019}.
 
-From the service provider's perspective, storing user data has found no better solution than an internal database, in other words,  a silo of personal user information. Millions of users are kept in a centralized platform in today's most popular Online Social Networks (OSN) like Facebook, Twitter, or Youtube. Here, control, decision-making, user data, and censorship depend on a single profit-driven organization. As data became the \emph{world's most valuable resource} \cite{parkins_2017}, these silos became a target. Facebook's latest data breach made the private data of around 530 million users public\cite{holmes_2021}. Unfortunately, not even a \emph{safe} password can protect a user's data because it is not under his control. The stage that followed the centralized digital identity is the federated one, where the \emph{Sign in with}-pattern provided trusts relationships between service providers, allowing linking of identities among identity management services \cite{1556498}. However, having a centrally federated identity represented even a more considerable risk, and users still had no control over their data. Finally, as a solution, the Self-Sovereign Identity (SSI) phase brought full user autonomy, putting him in the center of the identity administration \cite{allen_2016}.  
+From the service provider's perspective, storing user data has found no better solution than an internal database, or put in other words, a silo of personal user information. For example, millions of users are kept on a centralized platform in today's most popular Online Social Networks (OSN) like Facebook, Twitter, or Youtube. Here, control, decision-making, user data, and censorship depend on a single profit-driven organization. As data became the \emph{world's most valuable resource} \cite{parkins_2017}, these silos became a target. Facebook's latest data breach made the private data of around 530 million users public \cite{holmes_2021}. Unfortunately, not even a \emph{safe} password can protect a user's data because it is not under his control. 
+
+The stage that followed the centralized digital identity is the federated digital identity, where the \emph{Sign in with}-pattern provided trusts relationships between service providers, allowing linking of identities among identity management services \cite{1556498}. However, having a centrally federated identity represented even a more considerable risk, and users still had no control over their data. Finally, as a solution, the Self-Sovereign Identity (SSI) phase brought full user autonomy, putting him in the center of the identity administration \cite{allen_2016}.  
 
 SSI was not possible before because of a gap in technology to provide the infrastructure required for decentralized trust. Nonetheless, the emerging Distributed Ledger Technology (DLT) opened the door for a decentralized, verifiable identity foundation. The newly standardized Decentralized Identifiers (DIDs) from the W3C bring an approach to enable SSI. Furthermore, the DID-based communication protocol, DIDComm Messaging v2 promises high-trust, self-sovereign, and transport-agnostic interaction, following the same idea of further bringing decentralization to day-to-day Web usage.
 
-Concerning OSNs, different approaches to bringing decentralization have been proposed and standardized. Just in 2018, the Decentralized Social Networking Protocol (DSNP) ActivityPub became a W3C recommendation \cite{lemmer-webber_tallon_guy_prodromou_2018}, and since then, many Decentralized Online Social Networks (DOSN) have implemented it. The biggest ActivityPub implementer is the Twitter-like microblogging DOSN Mastodon\footnote{https://joinmastodon.org} with around three million registered users scattered through different independent servers. Each server sets its own rules, policies, and topics like LGBT+, Art, or Music. In addition, ActivityPub allows Mastodon to interact and communicate with other DOSNs that implement ActivityPub. An unthinkable situation in centralized architectures. 
+Concerning OSNs, different approaches to bringing decentralization have been proposed and standardized. Just in 2018, the Decentralized Social Networking Protocol (DSNP) ActivityPub became a W3C recommendation \cite{lemmer-webber_tallon_guy_prodromou_2018}, and since then, many Decentralized Online Social Networks (DOSN) have implemented it. The largest ActivityPub implementer is the Twitter-like microblogging DOSN Mastodon\footnote{https://joinmastodon.org} with around three million registered users scattered through different independent servers. Each server sets its own rules, policies, and topics like LGBT+, Art, or Music. In addition, ActivityPub allows Mastodon to interact and communicate with other DOSNs that implement ActivityPub. An unthinkable situation in centralized architectures. 
 
 
 % --------Problem Statement------------------
 \section{Problem statement}
  
- ActivityPub has proved to be a mature protocol that restores some level of decentralization in the current Social Web paradigm.  However, it still presents significant deficiencies that this thesis wants to address. Firstly, it only brings a decentralization level similar to the email paradigm. Mastodon, for example, uses centralized identity management. Creating an account uses basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} is not in the scope of Mastodon. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to prove ownership of accounts cryptographically. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought Keybase in 2020 \cite{rochko_2021}. 
+ ActivityPub has proved to be a mature protocol that restores some decentralization in the current Social Web paradigm \cite{webber_sporny_2017}.  However, it still presents significant deficiencies. Firstly, it only brings a decentralization level similar to the email paradigm. Mastodon, for example, uses centralized identity management. Creating an account uses basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} is not in the scope of Mastodon. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to prove ownership of accounts cryptographically. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought Keybase in 2020 \cite{rochko_2021}. 
 
-Secondly, ActivityPub has no security mechanisms defined. Crucial requirements like non-repudiation, message integrity, and confidentiality have not been included in the protocol specification. So far, the only present security feature is the recommended use of HTTPS, which relies on centralized certificate authorities. In Mastodon's implementation, the administrators of the servers have access to all the user's information, including private messages. Imposing a privacy risk for its users. 
+Secondly, ActivityPub has no security mechanisms defined. Crucial requirements like non-repudiation, message integrity, and confidentiality have not been included in the protocol specification \cite{sporny_longley_sabadello_reed_steele_2021}. So far, the only present security feature is the recommended use of HTTPS, which relies on centralized certificate authorities. In Mastodon's implementation, the administrators of the servers have access to all the user's information, including private messages. Imposing a privacy risk for its users. 
+
+% --------Research Questions------------------
 
 \section{Research Questions}
+To address the deficiencies and improvement opportunities in the ActivityPub-based social network Mastodon, the following research questions have been identified: 
 
-What are the implications of introducing DIDs to Mastodon and ActivityPub in terms of usability?
-Can a DID-based ActivityPub protocol use DIDComm for its standard communication?
-Can DIDComm provide a fully-decentralized communication to Mastodon?
-Can DIDComm allow ActivityPub to stop relying on HTTPS for its communication security?
+\begin{itemize}
+  \item Can DIDs bring self-sovereignty to Mastodon?
+  \item What are the implications of introducing DIDs to Mastodon and ActivityPub in terms of usability?
+  \item Can a DID-based ActivityPub protocol use DIDComm for its communication?
+  \item Can DIDComm provide a fully-decentralized and secure communication to Mastodon?
+\end{itemize}
 
+% --------Contribution------------------
 \section{Contribution}
-Is there any way to bring self-sovereignty to the federated social web? \cite{webber_sporny_2017}
 
-The biggest challenge for a new Web standard is that it requires adoption by a large number of people.
-
-By using a decentralized identifier system such as Decentralized Identifiers (DIDs) we can move fully from a decentralized to a distributed system,3 by escaping the core centralization mechanisms of DNS and SSL certificate authorities.
-The goal of this thesis, is to 
-The goal of this thesis is to have a fully functioning Mastodon instance that is DID-compliant and that implements ActivityPub using DIDComm as its communication protocol. 
-Replacing the existing centralized identity management with a Self-Sovereign Identity approach through DIDs, and enabling a communication protocol that allows confidentiality, non-repudiation, authenticity, and integrity without being bound to a platform-specific security mechanism.
+% The biggest challenge for a new Web standard is that it requires adoption by a large number of people. 
+This thesis has the following goals. Firstly, to replace the existing centralized identity management with a Self-Sovereign Identity using the DIDs standard from the W3C in an ActivityPub-based social network. Secondly, to bring a fully decentralized architecture by removing the core centralization mechanisms of DNS. In addition to keeping and extending the communication security level even after removing centralized SSL certificate authorities using the DIDComm Messaging spec from the Decentralized Identity Foundation. 
  
+% --------Outline------------------
 \section{Outline}
-Overview of your thesis structure in this chapter.
+The thesis is structured as follows. First, \autoref{cha:relatedwork} gives a detailed overview of the core technologies and standards involved in the development of this thesis, as well as similar approaches towards the thesis' goals. Next, \autoref{cha:conceptanddesign} presents a state-of-the-art approach, followed by the modifications required to integrate the Decentralized Identifiers into ActivityPub and the requirements to enable DIDComm Messaging v2. The implementation of the proposed design is detailed in \autoref{cha:implementation}, followed by its the evaluation in \autoref{cha:evaluation}. Finally, \autoref{cha:conclusion} concludes the thesis. 
 
