--- a/Thesis/content/06_conclusion.tex
+++ b/Thesis/content/06_conclusion.tex
@@ -2,7 +2,7 @@
 \label{cha:conclusion}
 
 This thesis presented a design to integrate DIDs and enable DIDComm Messaging v2 into an ActivityPub-based Online Social Network (OSN). The OSN Mastodon was chosen as the representative ActivityPub implementer, where DIDs could be introduced and used to enable DIDComm. 
- The integration of DIDs into ActivityPub was discussed, concluding with the substitution of Mastodon's standard usernames with DIDs. Consequently, a way to preserve the ActivityPub protocol while using DIDComm was explained, resulting in the encapsulation of ActivityPub as the body of a JWM.
+ The integration of DIDs into ActivityPub was discussed, concluding with the substitution of Mastodon's standard usernames with DIDs. Consequently, a way to preserve the ActivityPub protocol while using DIDComm was explained, resulting in the encapsulation of ActivityPub as the content of a JWM.
 
 Different DID methods were researched in order to find a way to create DIDs and modify the DID documents to include a new verification method and a service endpoint. Tested methods included \emph{did:ion, did:web, did:key} and, \emph{did:bba}. As the selected DID method for the prototype, \emph{did:ethr}, did not support adding RSA keys to a DID document, a custom way was developed with the help of one of the lead developers of the SSI platform provider \emph{Veramo}.
 Using the RSA keys and the service endpoints in two DID documents, Mastodon's process to resolve an account in federated communication was modified to partially remove any dependency on centralized third parties and allow a decentralized communication flow when sending a private message. This decentralization process included the following features. First is the ability to send and receive encrypted payload without needing HTTPS for encryption. The second is finding other users based on their DIDs by retrieving their DID documents stored in Ethereum's test network Ropsten instead of using Mastodon's default Webfinger. The DID resolver from the DIF was deployed to achieve the latter. Furthermore, nested JWTs were implemented to provide non-repudiation, message integrity, and encryption using JWM and the JWS and JWE standards.
@@ -21,4 +21,4 @@ The evaluation has shown that although achieving this thesis's goal, some issues
 
 Furthermore, a registration process that takes advantage of the \emph{authentication} property of a DID document has yet to be implemented. Spruce\footnote{https://www.spruceid.com/} is working on a similar idea, where a user is able to \emph{sign in} to a service using their Ethereum-based \emph{ENS} domain. 
 
-Finally, further development for the DID-based Mastodon prototype is intended. The goal is to be able to participate in the federation while still supporting DIDs by adding backward compatibility. In this manner, DIDs can be introduced to Mastodon and promote their further adoption. Following this idea, a DIDComm endpoint will be adapted so that users can send private messages, as proposed in this thesis.
+Finally, further development for the DID-based Mastodon prototype is intended. The goal is to be able to participate in the federation while still supporting DIDs by adding backward compatibility. In this manner, DIDs can be introduced to Mastodon and promote their further adoption. Following this idea, a DIDComm endpoint will be adapted so that users can send private messages, following the design proposed in this thesis.
